# Replay

./: .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  Replay.doap  UniTube-GTK.doap  app.drey.Replay.Devel.json  app.drey.Replay.Devel.yml  build.sh  com.gitlab.nahuelwexd.Unitube.json  meson.build  meson_options.txt
data/: app.drey.Replay.desktop.in.in  app.drey.Replay.metainfo.xml.in.in  com.github.nahuelwexd.Replay.desktop.in  com.github.nahuelwexd.Replay.desktop.in.in  com.github.nahuelwexd.Replay.gresource.xml  com.github.nahuelwexd.Replay.gschema.xml  com.github.nahuelwexd.Replay.metainfo.xml.in.in  com.github.nahuelwexd.UniTube.desktop.in.in  com.github.nahuelwexd.UniTube.gresource.xml  com.github.nahuelwexd.UniTube.gschema.xml  com.github.nahuelwexd.UniTube.metainfo.xml  com.github.nahuelwexd.UniTube.metainfo.xml.in  com.github.nahuelwexd.UniTube.metainfo.xml.in.in  com.github.nahuelwexd.Unitube.gresource.xml  com.github.nahuelwexd.Unitube.gschema.xml  com.github.replaydev.Replay.desktop.in.in  com.gitlab.nahuelwexd.Unitube.appearance.gschema.xml  com.gitlab.nahuelwexd.Unitube.desktop.in  com.gitlab.nahuelwexd.Unitube.gresource.xml  com.nucleuxsoft.UniTube.desktop.in.in  com.nucleuxsoft.UniTube.gresource.xml  com.nucleuxsoft.UniTube.gschema.xml  io.github.nahuelwexd.Replay.desktop.in.in  meson.build  replay-icon-resources.xml
data/gtk/: about-dialog.ui  help-overlay.ui  library-view.ui  main-header-bar.ui  main-window.ui  preferences-window.ui  subscriptions-view.ui  trending-view.ui  video-tile.ui
data/icons/: meson.build  replay-icon-resources.xml
data/styles/: _carousel.scss  _header-bar.scss  _home-page.scss  _navigation-sidebar.scss  _sidebar-item.scss  _stack-sidebar.scss  _trending-page.scss  _video-carousel-item.scss  _view-list.scss  _window.scss  colors.scss  common.scss  drawing.scss  styles-dark.scss  styles.scss
data/ui/: about-dialog.ui  header-bar.ui  library-view.ui  main-header-bar.ui  main-window.ui  preferences-window.ui  search-bar.ui  subscriptions-view.ui  trending-view.ui
lib/: InvidiousApi.vala  meson.build
lib/Models/: Instance.vala  Stats.vala  TrendingVideo.vala  VideoThumbnail.vala
lib/Requests/: InstancesRequest.vala  Request.vala  TrendingRequest.vala
lib/Utils/: Functions.vala  RequestError.vala  UriBuilder.vala  UriQueryBuilder.vala
src/: App.vala  AppWindow.blp  AppWindow.ui  AppWindow.vala  Application.vala  ApplicationWindow.ui  ApplicationWindow.vala  Main.vala  MainWindow.ui  MainWindow.ui.vala  app-theme.vala  app-window.ui  app-window.vala  app.vala  application-window.ui  application-window.vala  application.vala  com.github.nahuelwexd.Replay.gresource.xml  io.github.nahuelwexd.Replay.gresource.xml  main-window.vala  main.vala  meson.build  replay-app-window.ui  replay-app-window.vala  replay-app.vala  replay-main.vala  replay-resources.xml  replay-ui-resources.xml  replay.gresource.xml  resources.xml  style-hc.css  style.css
src/App/: App.vala  AppWindow.blp  AppWindow.vala  meson.build
src/Database/: Dao.vala
src/Enums/: AdaptiveMode.vala  Section.vala  ViewCategory.vala
src/Errors/: HttpError.vala  meson.build
src/Features/: meson.build
src/Models/: Video.vala  meson.build
src/Pages/: HomePage.ui  HomePage.vala  MainPage.ui  MainPage.vala  Page.vala  PageKey.vala  SearchPage.ui  SearchPage.vala  TrendingPage.ui  TrendingPage.vala  VideoPage.ui  VideoPage.vala
src/Player/: meson.build
src/Repositories/: VideoRepository.vala  meson.build
src/Services/: NavigationService.vala
src/Shared/: ViewModel.vala  meson.build
src/Trends/: meson.build
src/Utils/: Fetch.vala  FormatFunctions.vala  ListModel.vala  ObjectFactory.vala  ObservableList.vala  RequestOptions.vala  Response.vala  RunInThread.vala  ViewModel.vala  meson.build
src/ViewModels/: MainViewModel.vala  TrendingViewModel.vala
src/Views/: FavoritesView.ui  FavoritesView.vala  HistoryView.ui  HistoryView.vala  HomeView.ui  HomeView.vala  LibraryView.ui  LibraryView.vala  PlaylistsView.ui  PlaylistsView.vala  SearchView.ui  SearchView.vala  SubscriptionsView.ui  SubscriptionsView.vala  TrendsView.ui  TrendsView.vala  View.vala  WatchLaterView.ui  WatchLaterView.vala
src/Widgets/: BottomNavigationBar.ui  BottomNavigationBar.vala  HeaderBar.ui  HeaderBar.vala  MainHeaderBar.ui  MainHeaderBar.vala  NavigationSidebar.ui  NavigationSidebar.vala  NavigationSidebarRow.ui  Navigator.vala  Page.vala  SecondaryHeaderBar.ui  SecondaryHeaderBar.vala  StackSidebar.ui  StackSidebar.vala  Thumbnail.vala  VideoCard.blp  VideoCard.vala  VideoCarouselItem.ui  VideoCarouselItem.vala  View.css  View.vala  ViewList.ui  ViewList.vala  ViewListRow.ui  meson.build
src/Windows/: ApplicationWindow.ui  ApplicationWindow.vala  PreferencesWindow.ui  PreferencesWindow.vala
src/app/: app.vala  meson.build
src/core/: api-error.vala
src/dialogs/: about-dialog.ui  about-dialog.vala
src/enums/: app-theme.vala  element-theme.vala  view-category.vala
src/helpers/: replay-helpers-adaptiveness-manager.vala  replay-helpers-container.vala
src/pages/: HomePage.vala  home-page.ui  home-page.vala  page.vala  replay-home-page.ui  replay-home-page.vala  replay-not-found-page.ui  replay-not-found-page.vala
src/services/: element-theme.vala  navigation-service.vala  settings-service.vala  styling-service.vala  themes-service.vala
src/shared/: meson.build  view-model.vala
src/trends/: meson.build
src/utils/: generic-list-model.vala  list-model.vala  observable-list.vala  replay-navigator.vala
src/videos/: meson.build  video-repository.vala  video.vala
src/view-models/: categories-list-model.vala  category.vala  preferences-view-model.vala  trending-view-model.vala  view-model-locator.vala  view-model-state.vala
src/views/: favorites-view.ui  favorites-view.vala  home-view.ui  home-view.vala  library-view.ui  library-view.vala  search-view.ui  search-view.vala  subscriptions-view.ui  trending-view.ui  (+5 more)
utlib/: .editorconfig  .gitignore  README.md  UTLib.doap  client.vala  deps.meson  meson.build
(+273 files in other folders)
